
CONFIGDIR=@sysconfdir@
PKGLIBDIR=@pkglibdir@
MODULESDIR=$(pkglibdir)/
SERVICESDIR=$(pkglibdir)/
#CONFIGDIR=$(sysconfdir)/
LOGDIR=$(localstatedir)/log/
SOCKDIR=/var/run/c-icap


SUBDIRS =  . modules services

#c_icap the main server 

pkginclude_HEADERS = $(ALL_INCS)
#sysconf_DATA = c-icap.conf c-icap.magic


